# docs/swagger.yaml
@@ -43,21 +43,27 @@ definitions:
     type: object
   request.GenerateOTPRequest:
     properties:
+      phone_number:
+        type: string
       purpose:
         type: string
       voter_id:
         type: string
     required:
+    - phone_number
     - purpose
     - voter_id
     type: object
   request.ResendOTPRequest:
     properties:
+      phone_number:
+        type: string
       purpose:
         type: string
       voter_id:
         type: string
     required:
+    - phone_number
     - purpose
     - voter_id
     type: object
